--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bootdb
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot
 spring.datasource.username=root
-spring.datasource.password=Password@123
+spring.datasource.password=
 spring.datasource.platform=mysql
 
 spring.mvc.view.prefix:/templates/view/
